# hateoas-agent

./: .env.example  .gitignore  CLAUDE.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/hateoas_agent/: __init__.py  agent_slot.py  async_runner.py  composite.py  conditions.py  mcp_server.py  orchestrator.py  orchestrator_persistence.py  orchestrator_visualization.py  persistence.py  registry.py  resource.py  state_machine.py
tests/: test_action_centric.py  test_adversarial.py  test_agent_slot.py  test_async_runner.py  test_composite.py  test_conditions.py  test_cross_api_parity.py  test_discovery_mode.py  test_dynamic_tools.py  test_edge_cases.py  test_mcp_server.py  test_observability_warnings.py  test_orchestrator.py  test_orchestrator_integration.py  test_orchestrator_persistence.py  test_orchestrator_registry_integration.py  test_orchestrator_visualization.py  test_persistence.py  test_state_machine.py  test_visualization.py
